[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/bg/bg-options.png" type="Texture" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SceneOptions.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="SceneOptions" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 45.0
margin_top = 32.0
margin_right = 148.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Close"

[node name="Label" type="Label" parent="."]
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Options"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 50.0
margin_top = 136.0
margin_right = 1255.0
margin_bottom = 533.0
rect_min_size = Vector2( 105, 397 )
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 3.0
margin_right = 134.0
margin_bottom = 17.0
text = "Number of stars"
valign = 1

[node name="txtStars" type="TextEdit" parent="GridContainer"]
margin_left = 144.0
margin_right = 244.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
text = "15"

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 27.0
margin_right = 134.0
margin_bottom = 41.0
text = "Enemy generation (s)"
valign = 1

[node name="txtMobTimer" type="TextEdit" parent="GridContainer"]
margin_left = 144.0
margin_top = 24.0
margin_right = 244.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 20 )
text = "10"

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 51.0
margin_right = 134.0
margin_bottom = 65.0
text = "Madness timer (s)"
valign = 1

[node name="txtMadness" type="TextEdit" parent="GridContainer"]
margin_left = 144.0
margin_top = 48.0
margin_right = 244.0
margin_bottom = 68.0
rect_min_size = Vector2( 100, 20 )
text = "30"

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 75.0
margin_right = 134.0
margin_bottom = 89.0
text = "Game duration (s)"
valign = 1

[node name="txtGameDuration" type="TextEdit" parent="GridContainer"]
margin_left = 144.0
margin_top = 72.0
margin_right = 244.0
margin_bottom = 92.0
rect_min_size = Vector2( 100, 20 )
text = "100"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="GridContainer/txtStars" to="." method="_on_txtStars_text_changed"]
[connection signal="text_changed" from="GridContainer/txtMobTimer" to="." method="_on_txtMobTimer_text_changed"]
[connection signal="text_changed" from="GridContainer/txtMadness" to="." method="_on_txtMadness_text_changed"]
[connection signal="text_changed" from="GridContainer/txtGameDuration" to="." method="_on_txtGameDuration_text_changed"]
